fix overflow

--- a/packages/docs/src/routes/docs/docs.css
+++ b/packages/docs/src/routes/docs/docs.css
@@ -4,6 +4,7 @@
 }
 
 .docs .docs-container {
+  overflow: hidden;
   @apply pt-[80px];
   @apply px-8;
 
